--- a/client/app/accountHistory/accountHistory.html
+++ b/client/app/accountHistory/accountHistory.html
@@ -28,7 +28,7 @@
 
 	<div class="row" ng-repeat="move in accountHistory_moves track by $index" ng-show="move.amount != 0">
 		<div class="col-sm-1 text-left">{{ move.date | date: 'dd/MM/yyyy' }}</div>
-		<div class="col-sm-4 text-left">{{ move.wording }}</div>
+		<div class="col-sm-4 text-left">{{ move.wording }}{{ move.periodEnd ? ' - période '+(move.period | date: 'dd/MM')+' - '+(move.periodEnd | date: 'dd/MM/yyyy') : ''}}</div>
 		<div class="col-sm-1 text-right">{{ move.quantity }}</div>
 		<div class="col-sm-1 text-right">{{ move.price | number:2 }}{{ move.price ? ' €' : '' }}</div>
 		<div class="col-sm-1 text-right">{{ move.fees | number:2 }}{{ move.fees ? ' €' : '' }}</div>
