fin mise en cache graphProgress

--- a/client/_index.html
+++ b/client/_index.html
@@ -30,7 +30,9 @@
     </script>
     
     <navbar></navbar>
-    <div ui-view=""></div>
+    <div style="min-height: 100%; margin-bottom: -40px; padding-bottom: 40px;">
+      <div ui-view=""></div>
+    </div>
     <footer></footer>
 </body>
 </html>
