--- a/client/app/wallet/wallet.html
+++ b/client/app/wallet/wallet.html
@@ -99,7 +99,7 @@
 	</div>
 
 	<div class="row wallet-table-total" ng-if="wallet.equities.length > 0">
-		<div class="col-sm-3 wallet-table-wrap">
+		<div class="col-sm-3 wallet-table-wrap" style="padding-left:15px">
 			Total
 		</div>
 		<div class="col-sm-4 wallet-table-wrap">
