correction bug buySell actual price

--- a/client/app/buysell/buysell.html
+++ b/client/app/buysell/buysell.html
@@ -33,12 +33,12 @@
 			</div>
 		</div>
 
-		<div class="row" ng-show="price">
+		<div class="row" ng-show="lastTradeValue">
 			<div class="col-sm-6 buySell-lastTradeDate">
 				Valeur au {{lastTradeDate | date : 'dd/MM/yyyy à HH:mm' }} :<br /><br />
 			</div>
 			<div class="col-sm-6 buySell-lastTradePrice">
-				{{price}} €
+				{{lastTradeValue}} €
 			</div>
 		</div>
 
