infos financières liste membres

--- a/client/app/members-list/members-list.html
+++ b/client/app/members-list/members-list.html
@@ -1,77 +1,92 @@
-<div class="container">
 
-
-	<div class="row">
-		<div class="col-sm-12 text-center">
-			<h1>Liste des membres du club {{ club.clubName }}</h1>
-		</div>
+<div class="row">
+	<div class="col-sm-12 text-center">
+		<h1>Liste des membres du club {{ club.clubName }}</h1>
 	</div>
-	<div class="row">
-		<div class="col-sm-12">
-			<br />
-			<div class="row">
-				<div class="col-sm-offset-2 col-sm-2 text-center"><b>Nom</b></div>
-				<div class="col-sm-1 text-center"><b>Fonction</b></div>
-				<div class="col-sm-3 text-center"><b>Email</b></div>
-				<div class="col-sm-3 text-center"><b>Versement dû</b></div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-offset-2 col-sm-2 text-center">{{ club.president.firstName }} {{ club.president.lastName }}</div>
-				<div class="col-sm-1 text-center">Président</div>
-				<div class="col-sm-3 text-center">{{ club.president.email }}</div>
-				<div class="col-sm-3 text-center" ng-show="!club.president.initial" ng-class="{warning: club.president.warning}">
-					versement initial {{ club.initialAmount }} € 
-					<a class="subscription-validate" ng-click="validateSubscription(club.president.email)"><span class="fa fa-check fa-lg"></span></a>
-				</div>
-				<div class="col-sm-3 text-center" ng-show="club.president.unpaid.length > 0 && club.president.initial">
-					{{ club.president.unpaid[0].amountDue }} € 
-					<span ng-class="{warning: club.president.warning}">du {{ club.president.unpaid[0].startPeriod | date: 'dd/MM' }} au {{ club.president.unpaid[0].endPeriod | date: 'dd/MM' }}</span>
-					<a class="subscription-validate" ng-click="validateSubscription(club.president.email)"><span class="fa fa-check fa-lg"></span></a>
-				</div>
-				<div class="col-sm-3 text-center" ng-show="club.president.unpaid.length == 0">
-					A jour
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-offset-2 col-sm-2 text-center">{{ club.treasurer.firstName }} {{ club.treasurer.lastName }}</div>
-				<div class="col-sm-1 text-center">Trésorier</div>
-				<div class="col-sm-3 text-center">{{ club.treasurer.email }}</div>
-				<div class="col-sm-3 text-center" ng-show="!club.treasurer.initial" ng-class="{warning: club.treasurer.warning}">
-					versement initial {{ club.initialAmount }} € 
-					<a class="subscription-validate" ng-click="validateSubscription(club.treasurer.email)"><span class="fa fa-check fa-lg"></span></a>
-				</div>
-				<div class="col-sm-3 text-center" ng-show="club.treasurer.unpaid.length > 0 && club.treasurer.initial">
-					{{ club.treasurer.unpaid[0].amountDue }} € 
-					<span ng-class="{warning: club.treasurer.warning}">du {{ club.treasurer.unpaid[0].startPeriod | date: 'dd/MM' }} au {{ club.treasurer.unpaid[0].endPeriod | date: 'dd/MM' }}</span>
-					<a class="subscription-validate" ng-click="validateSubscription(club.treasurer.email)"><span class="fa fa-check fa-lg"></span></a>
-				</div>
-				<div class="col-sm-3 text-center" ng-show="club.treasurer.unpaid.length == 0">
-					A jour
-				</div>
-			</div>
-
-			<div class="row" ng-repeat="member in club.members">
-				<div class="col-sm-offset-2 col-sm-2 text-center">{{ member.firstName }} {{ member.lastName }}</div>
-				<div class="col-sm-1 text-center">Membre</div>
-				<div class="col-sm-3 text-center">{{ member.email }}</div>
-				<div class="col-sm-3 text-center" ng-show="!member.initial" ng-class="{warning: member.warning}">
-					versement initial {{ club.initialAmount }} € 
-					<a class="subscription-validate" ng-click="validateSubscription(member.email)"><span class="fa fa-check fa-lg"></span></a>
-				</div>
-				<div class="col-sm-3 text-center" ng-show="member.unpaid.length > 0 && member.initial">
-					{{ member.unpaid[0].amountDue }} € 
-					<span ng-class="{warning: member.warning}">du {{ member.unpaid[0].startPeriod | date: 'dd/MM' }} au {{ member.unpaid[0].endPeriod | date: 'dd/MM' }}</span>
-					<a class="subscription-validate" ng-click="validateSubscription(member.email)"><span class="fa fa-check fa-lg"></span></a>
-				</div>
-				<div class="col-sm-3 text-center" ng-show="member.unpaid.length == 0">
-					A jour
-				</div>
-			</div>
-
+</div>
+<div class="row">
+	<div class="col-sm-12">
+		<br />
+		<div class="row">
+			<div class="col-sm-offset-1 col-sm-1 text-center"><b>Nom</b></div>
+			<div class="col-sm-1 text-center"><b>Fonction</b></div>
+			<div class="col-sm-2 text-center"><b>Email</b></div>
+			<div class="col-sm-1 text-center"><b>Date d'entrée</b></div>
+			<div class="col-sm-1 text-center"><b>Cumul versement</b></div>
+			<div class="col-sm-1 text-center"><b>Nombre parts</b></div>
+			<div class="col-sm-1 text-center"><b>Valeur liquidative</b></div>
+			<div class="col-sm-1 text-center"><b>Indice performance</b></div>
+			<div class="col-sm-2 text-center"><b>Versement dû</b></div>
 		</div>
+
+		<div class="row">
+			<div class="col-sm-offset-1 col-sm-1 text-center">{{ club.president.firstName }} {{ club.president.lastName }}</div>
+			<div class="col-sm-1 text-center">Président</div>
+			<div class="col-sm-2 text-center">{{ club.president.email }}</div>
+			<div class="col-sm-1 text-center">{{ club.president.entryDate | date:'dd/MM/yyyy' }}</div>
+			<div class="col-sm-1 text-center">{{ club.president.totalSubscriptions | number:0 }} €</div>
+			<div class="col-sm-1 text-center">{{ (club.president.totalSubscriptions / club.shareAmount) | number:0 }}</div>
+			<div class="col-sm-1 text-center">{{ ((valorization + treasury) * (club.president.totalSubscriptions / club.shareAmount) / club.shares)*(1-club.exitPercentage/100) | number:2 }} €</div>
+			<div class="col-sm-1 text-center">{{ ( ( ((valorization + treasury) * (club.president.totalSubscriptions / club.shareAmount) / club.shares)*(1-club.exitPercentage/100) ) - club.president.totalSubscriptions )*100 / club.president.totalSubscriptions | number:2 }} %</div>
+			<div class="col-sm-2 text-center" ng-show="!club.president.initial" ng-class="{warning: club.president.warning}">
+				versement initial {{ club.initialAmount }} € 
+				<a class="subscription-validate" ng-click="validateSubscription(club.president.email)"><span class="fa fa-check fa-lg"></span></a>
+			</div>
+			<div class="col-sm-2 text-center" ng-show="club.president.unpaid.length > 0 && club.president.initial">
+				{{ club.president.unpaid[0].amountDue }} € 
+				<span ng-class="{warning: club.president.warning}">du {{ club.president.unpaid[0].startPeriod | date: 'dd/MM' }} au {{ club.president.unpaid[0].endPeriod | date: 'dd/MM' }}</span>
+				<a class="subscription-validate" ng-click="validateSubscription(club.president.email)"><span class="fa fa-check fa-lg"></span></a>
+			</div>
+			<div class="col-sm-2 text-center" ng-show="club.president.unpaid.length == 0">
+				A jour
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-offset-1 col-sm-1 text-center">{{ club.treasurer.firstName }} {{ club.treasurer.lastName }}</div>
+			<div class="col-sm-1 text-center">Trésorier</div>
+			<div class="col-sm-2 text-center">{{ club.treasurer.email }}</div>
+			<div class="col-sm-1 text-center">{{ club.treasurer.entryDate | date:'dd/MM/yyyy' }}</div>
+			<div class="col-sm-1 text-center">{{ club.treasurer.totalSubscriptions | number:0 }} €</div>
+			<div class="col-sm-1 text-center">{{ (club.treasurer.totalSubscriptions / club.shareAmount) | number:0 }}</div>
+			<div class="col-sm-1 text-center">{{ ((valorization + treasury) * (club.treasurer.totalSubscriptions / club.shareAmount) / club.shares)*(1-club.exitPercentage/100) | number:2 }} €</div>
+			<div class="col-sm-1 text-center">{{ ( ( ((valorization + treasury) * (club.treasurer.totalSubscriptions / club.shareAmount) / club.shares)*(1-club.exitPercentage/100) ) - club.treasurer.totalSubscriptions )*100 / club.treasurer.totalSubscriptions | number:2 }} %</div>
+			<div class="col-sm-2 text-center" ng-show="!club.treasurer.initial" ng-class="{warning: club.treasurer.warning}">
+				versement initial {{ club.initialAmount }} € 
+				<a class="subscription-validate" ng-click="validateSubscription(club.treasurer.email)"><span class="fa fa-check fa-lg"></span></a>
+			</div>
+			<div class="col-sm-2 text-center" ng-show="club.treasurer.unpaid.length > 0 && club.treasurer.initial">
+				{{ club.treasurer.unpaid[0].amountDue }} € 
+				<span ng-class="{warning: club.treasurer.warning}">du {{ club.treasurer.unpaid[0].startPeriod | date: 'dd/MM' }} au {{ club.treasurer.unpaid[0].endPeriod | date: 'dd/MM' }}</span>
+				<a class="subscription-validate" ng-click="validateSubscription(club.treasurer.email)"><span class="fa fa-check fa-lg"></span></a>
+			</div>
+			<div class="col-sm-2 text-center" ng-show="club.treasurer.unpaid.length == 0">
+				A jour
+			</div>
+		</div>
+
+		<div class="row" ng-repeat="member in club.members">
+			<div class="col-sm-offset-1 col-sm-1 text-center">{{ member.firstName }} {{ member.lastName }}</div>
+			<div class="col-sm-1 text-center">Membre</div>
+			<div class="col-sm-2 text-center">{{ member.email }}</div>
+			<div class="col-sm-1 text-center">{{ member.entryDate | date:'dd/MM/yyyy' }}</div>
+			<div class="col-sm-1 text-center">{{ member.totalSubscriptions | number:0 }} €</div>
+			<div class="col-sm-1 text-center">{{ (member.totalSubscriptions / club.shareAmount) | number:0 }}</div>
+			<div class="col-sm-1 text-center">{{ ((valorization + treasury) * (member.totalSubscriptions / club.shareAmount) / club.shares)*(1-club.exitPercentage/100) | number:2 }} €</div>
+			<div class="col-sm-1 text-center">{{ ( ( ((valorization + treasury) * (member.totalSubscriptions / club.shareAmount) / club.shares)*(1-club.exitPercentage/100) ) - member.totalSubscriptions )*100 / member.totalSubscriptions | number:2 }} %</div>
+			<div class="col-sm-2 text-center" ng-show="!member.initial" ng-class="{warning: member.warning}">
+				versement initial {{ club.initialAmount }} € 
+				<a class="subscription-validate" ng-click="validateSubscription(member.email)"><span class="fa fa-check fa-lg"></span></a>
+			</div>
+			<div class="col-sm-2 text-center" ng-show="member.unpaid.length > 0 && member.initial">
+				{{ member.unpaid[0].amountDue }} € 
+				<span ng-class="{warning: member.warning}">du {{ member.unpaid[0].startPeriod | date: 'dd/MM' }} au {{ member.unpaid[0].endPeriod | date: 'dd/MM' }}</span>
+				<a class="subscription-validate" ng-click="validateSubscription(member.email)"><span class="fa fa-check fa-lg"></span></a>
+			</div>
+			<div class="col-sm-2 text-center" ng-show="member.unpaid.length == 0">
+				A jour
+			</div>
+		</div>
+
 	</div>
-
-
 </div>
