--- a/client/_index.html
+++ b/client/_index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" name="referrer" content="no-referrer">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <base href="/">
-    <title>Angular Full-Stack Generator</title>
+    <title>Curves</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
